--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
+    "@xyflow/react": "^12.3.2",
     "axios": "^1.7.7",
+    "modern-normalize": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^6.27.0",
     "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
