--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.3.0",
     "@xyflow/react": "^12.3.2",
     "axios": "^1.7.7",
+    "axios-rate-limit": "^1.4.0",
     "modern-normalize": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
